[package]
name = "imgs"
version = "0.1.0"
edition = "2021"
author="olayemi michael <olayemimg@gmail.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="0.11.9"
select="0.5.0"
tokio={version="1.17.0", features=["full"]}
url="2.2.2"
regex="1.5.5"
error-chain="0.12.4"
clap={version="3.1.6", features=["derive"]}
csv="1.1.6"
serde_json = "1.0" 
indicatif="0.16.2"
anyhow="1.0.56"

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0"
